@@ -74,6 +74,9 @@ Tests
 - Issue #12820: add tests for the xml.dom.minicompat module.
   Patch by John Chandler and Phil Connell.
 
+- Issue #17690: test_time now works with unittest test discovery.
+  Patch by Zachary Ware.
+
 Documentation
 -------------
 
